# gray-mirror-tg

./: .env.example  .gitignore  Cargo.toml  README.md  example.ron  example.ron.bak
.db/: tg
src/: channel.rs  client.rs  context.rs  error.rs  interface.rs  main.rs  persist.rs  types.rs  update.rs
src/abstruct/: app.rs  mod.rs  runable.rs
src/app/: gray_mirror.rs  mod.rs  update.rs
src/app/addchat/: convert.rs  mod.rs
src/app/extract/: mod.rs  url_parse.rs
src/app/fetch_chat/: convert.rs  mod.rs
src/app/finder/: engine.rs  mod.rs  soso.rs  watchdog.rs
src/app/finder/recursion/: mod.rs
src/app/finder/search_bot/: generic.rs.todo  mod.rs  soso.rs  watchdog.rs
src/app/generic/: mod.rs
src/app/mirror/: eliminate.rs  history.rs  mod.rs  update.rs
src/app/search/: mod.rs
src/app/search/bot/: engine.rs  mod.rs  watchdog.rs
src/finder/: mod.rs
src/service/: mod.rs
src/types/: chat.rs  favorite.rs  link.rs  message.rs  mod.rs  search.rs
src/update/: mod.rs  simple.rs
