[package]
name = "gray-mirror-tg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
dotenv_codegen = "0.15.0"
grammers-client = { version = "0.7.0", features = ["proxy"] }
quick-impl = "0.1.4"
rpassword = "7.3.1"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
