[toolchain]
channel = "nightly"

[package]
edition = "2021"
name = "gray-mirror-tg"
version = "0.1.2"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
bytes = "1.8.0"
chrono = "0.4.38"
const-random = "0.1.18"
dotenv_codegen = "0.15.0"
# grammers-client = { version = "0.7.0", features = ["proxy"] }
grammers-client = {git = "https://github.com/Lonami/grammers", features = ["proxy", "serde"]}
quick-impl = "0.1.4"
reqwest = "0.12.8"
rmp-serde = "1.3.0"
ron = "0.8.1"
rpassword = "7.3.1"
sea-orm = { version = "1.1.0", features = ["runtime-tokio", "sqlx-postgres", "sqlx-sqlite"] }
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.129"
tokio = {version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync"]}
tracing = {version = "0.1.40", features = ["release_max_level_info"]}
tracing-loki = "0.2.5"
tracing-subscriber = "0.3.18"
url = {version = "2.5.2", features = ["serde"]}
